--- a/app/src/main/res/layout/cv_preview_layout.xml
+++ b/app/src/main/res/layout/cv_preview_layout.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bgColor"
+    android:id="@+id/cvPreviewItem"
     android:padding="@dimen/small_padding">
 
     <TextView
