--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toBottomOf="@+id/updateLanguageTwo" />
 
         <EditText
-            android:id="@+id/levelThree"
+            android:id="@+id/updateLevelThree"
             android:layout_width="60dp"
             android:layout_height="40dp"
             android:ems="10"
