--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -44,23 +44,24 @@
         android:layout_height="43dp"
         android:background="@color/cardview_dark_background"
         android:ems="10"
-        app:layout_constrainedWidth="true"
-        app:layout_constraintWidth_percent=".8"
-        android:inputType="textPersonName"
-        android:textColor="@color/secondaryColor"
         android:hint="Name..."
+        android:inputType="textPersonName"
         android:padding="10dp"
+        android:textColor="@color/secondaryColor"
+        app:layout_constrainedWidth="true"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.105"
+        app:layout_constraintHorizontal_bias="0.202"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
- />
+        app:layout_constraintWidth_percent=".8" />
 
     <ImageView
         android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:src="@drawable/ic_baseline_search_24"
         app:layout_constraintBottom_toBottomOf="@+id/searchField"
         app:layout_constraintEnd_toEndOf="parent"
